Added:Link Career Page

--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -79,4 +79,4 @@ block content
                 a.btn-scroll(href='javascript:void(0);') go to top
       .btn-wrap
         a.btn.btn-gray(href="about-us.html") About Us
-        a.btn.btn-outline-gray(href="javascript:void(0);") Contact Us
+        a.btn.btn-outline-gray(href="contact-us.html") Contact Us
