--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -2,7 +2,6 @@ extends ./layouts/bootstrap.jade
 
 block content
   section.section-contactus.section-banner
-    .container
   section.section-contactus
     .container
       .contact-form.section-content
@@ -51,8 +50,6 @@ block content
             .col-md-6
               .btn-wrap
                 button.btn.btn-outline-gray(type='submit') Subscribe
-  section
-    .container
       .contactus-footer
         .row
           .col-sm-4
@@ -76,7 +73,7 @@ block content
               .email
                 i.icon-mail
                 a.font-weight-light(href="mailto:info@joshsoftware.com") info@joshsoftware.com
-              .social-media-links
+              .social-media-links.d-none
                 a(href="https://facebook.com/joshsoftware", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.882 43.705')
                     path.svg-fill(d='M-147.462,241.187h1a15.748,15.748,0,0,1,4.548.594,19.41,19.41,0,0,1,4.475,1.692,17.844,17.844,0,0,1,3.726,2.518c.708.635,1.44,1.249,2.1,1.932a19.169,19.169,0,0,1,3.1,4.3,21.344,21.344,0,0,1,1.806,4.328,28.883,28.883,0,0,1,.7,3.535,15.67,15.67,0,0,1,.138,3.018,25.364,25.364,0,0,1-.382,3.6,19.813,19.813,0,0,1-2.152,5.964,18.012,18.012,0,0,1-2.571,3.706c-.476.492-.871,1.062-1.367,1.521a23.724,23.724,0,0,1-4.881,3.523,21.512,21.512,0,0,1-5.626,2.062,13.528,13.528,0,0,1-3.511.407c-.655-.028-1.314,0-1.973,0a20.3,20.3,0,0,1-6.618-1.371,19.313,19.313,0,0,1-4.243-2.213,16.956,16.956,0,0,1-2.49-2c-.492-.5-1-.988-1.493-1.493a18.816,18.816,0,0,1-2.742-3.808,17.774,17.774,0,0,1-1.627-3.625,19.119,19.119,0,0,1-1.029-5.264c0-.671-.2-1.347-.151-2.034a24.705,24.705,0,0,1,1.627-7.652,19.738,19.738,0,0,1,1.961-3.661c.533-.777,1.147-1.5,1.737-2.237a12.287,12.287,0,0,1,1.106-1.273,23.7,23.7,0,0,1,4.7-3.47,21.446,21.446,0,0,1,4.068-1.737,30.912,30.912,0,0,1,3.088-.7A23.943,23.943,0,0,1-147.462,241.187Zm1.676,35.147V265.428a22.328,22.328,0,0,1,.09-3.58h2.128a6.122,6.122,0,0,0,2.176-.13,8.68,8.68,0,0,1,.028-1.875,3.535,3.535,0,0,0,.057-1.944h-4.475c0-1.22-.041-2.363.024-3.5a1.4,1.4,0,0,1,.513-.968,3.144,3.144,0,0,1,2.034-.529,17.576,17.576,0,0,1,1.908.37c.122-.574.244-1.045.317-1.53.106-.712.187-1.428.252-2.144a.545.545,0,0,0-.11-.438.545.545,0,0,0-.4-.2c-.753-.09-1.505-.2-2.258-.236-1-.041-2,0-3,0a4.621,4.621,0,0,0-4.292,3.34,11.465,11.465,0,0,0-.3,2.477c-.049,1.1,0,2.209,0,3.425h-2.758c0,1.363-.053,2.612,0,3.824.972.216,1.867-.1,2.738.22V276.35Z', transform='translate(169.227 -240.685)')
@@ -92,5 +89,5 @@ block content
                 a(href="https://github.com/joshsoftware", target="_blank")
                   svg(xmlns='http://www.w3.org/2000/svg', viewbox='0 0 43.957 42.855')
                     path.svg-fill(d='M225.936,241.212a21.466,21.466,0,0,0-21.466,21.466h0a21.475,21.475,0,0,0,14.673,20.34c1.074.2,1.464-.468,1.464-1.041s0-2.2-.028-3.995c-5.964,1.3-7.229-2.526-7.229-2.526a5.683,5.683,0,0,0-2.38-3.136c-1.953-1.33.146-1.306.146-1.306a4.52,4.52,0,0,1,3.291,2.209c1.912,3.279,5.02,2.335,6.228,1.782A4.6,4.6,0,0,1,222,272.157c-4.759-.541-9.763-2.384-9.763-10.6a8.319,8.319,0,0,1,2.213-5.772,7.813,7.813,0,0,1,.212-5.7s1.8-.578,5.886,2.2a20.339,20.339,0,0,1,10.739,0c4.092-2.77,5.886-2.2,5.886-2.2a7.786,7.786,0,0,1,.216,5.7,8.283,8.283,0,0,1,2.2,5.756c0,8.238-5.02,10.04-9.8,10.577a5.112,5.112,0,0,1,1.456,3.97c0,2.848-.028,5.191-.028,5.882,0,.57.407,1.22,1.477,1.041a21.446,21.446,0,0,0-6.745-41.806Z', transform='translate(-203.97 -240.7)')
-  section
-    p And Disrupt Your Industry
+      
+      p.txt-display And <br>Disrupt Your Industry
