--- a/src/styles/pages/_services.scss
+++ b/src/styles/pages/_services.scss
@@ -12,14 +12,14 @@
     }
     
     .section-heading {
-      font-size: rem(32px);
+      font-size: rem(40px);
       line-height: rem(39px);
       font-weight: 300;
       color: $gray-20;
       text-transform: uppercase;
       letter-spacing: rem(1px);
       text-align: center;
-      margin: 0 0 rem(8px);
+      margin: 0 0 rem(20px);
     }
   }
 }
@@ -37,11 +37,13 @@
   }
 
   .card-title{
+      font-size: rem(32px);
+      margin-bottom: rem(32px);
 
-    @include media-breakpoint-down(md) {
-      font-size: rem(30px);
-      text-align: center;
-    }
+      @include media-breakpoint-down(md) {
+        font-size: rem(30px);
+        text-align: center;
+      }
 
     @include media-breakpoint-down(sm) {
       font-size: rem(24px);
