Edited: Team Page banner and images

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -258,6 +258,7 @@ $font-family-base: $font-family-lato;
 //$headings-margin-bottom:      ($spacer / 2) !default;
 //$headings-font-family:        inherit !default;
 //$headings-font-weight:        500 !default;
+$headings-font-weight:        300;
 //$headings-line-height:        1.2 !default;
 //$headings-color:              inherit !default;
 
