--- a/src/styles/_shared.scss
+++ b/src/styles/_shared.scss
@@ -137,7 +137,7 @@ button:focus {
 
   .card-img{
     width:auto;
-    height:rem(178px);
+    height:rem(100px);
     margin-bottom:rem(16px);
     @include border-radius(0);
   }
@@ -179,6 +179,44 @@ button:focus {
 
     @include media-breakpoint-down(sm) {
       font-size: rem(10px);
+    }
+  }
+}
+
+.scroll-down {
+  position: absolute;
+  left: 50%;
+  bottom: rem(22px);
+  @include translate(-50%, 0);
+  color: $gray-20;
+  z-index: 3;
+  text-decoration: none;
+
+  @include media-breakpoint-down(md){
+    bottom: rem(4px);
+  }
+
+  @include media-breakpoint-down(sm) {
+    display: none !important;
+   }
+
+  &:hover {
+    text-decoration: none;
+    color: $gray-20;
+  }
+
+  &.text-white {
+
+    &:hover {
+      color: $white;
+    }
+  }
+
+  i{
+    font-size: rem(48px);
+
+    @include media-breakpoint-down(md){
+      font-size: rem(28px);
     }
   }
 }
