--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -2,11 +2,43 @@
 .section-team{
 
   &.section-banner{
-    background-color: transparent;
+    position: relative;
+    background: transparent url('../images/team-banner@2x.jpg') no-repeat center center;
+    background-size: cover;
     min-height: rem(825px);
 
-    @include media-breakpoint-down(sm){
+    @include media-breakpoint-down(md){
+      min-height: rem(430px);
+    }
+
+    @include media-breakpoint-down(md){
       min-height: rem(360px);
+    }
+  }
+
+  .heading-overlay {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba($white, 0.65);
+    min-height: rem(325px);
+
+    @include media-breakpoint-down(md){
+      min-height: rem(170px);
+    }
+
+    @include media-breakpoint-down(sm) {
+     display: none !important;
+    }
+
+    .section-heading {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      @include translate(-50%, -50%);
+      margin: 0;
+      text-align: center;
     }
   }
 }
@@ -139,7 +171,7 @@
       width: rem(34px);
 
       @include media-breakpoint-down(sm){
-        width: rem(30px);
+        width: rem(20px);
       }
     }
   }
@@ -153,7 +185,8 @@
     letter-spacing: 1px;
 
     @include media-breakpoint-down(sm){
-      font-size:rem(18px);
+      font-size:rem(12px);
+      line-height:rem(16px);
     }
   }
 
