Added:Testimonial Page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -52,5 +52,6 @@
 @import "pages/open_source";
 @import "pages/about-us";
 @import "pages/contact-us";
+@import "pages/testimonial";
 /* offcanvas */
 @import "offcanvas";
