Edited:Heading Changes

--- a/src/styles/pages/_contact-us.scss
+++ b/src/styles/pages/_contact-us.scss
@@ -28,7 +28,7 @@
     margin: 0 rem(-15px);
   }
 
-  h1{
+  .section-heading{
     font-size: rem(46px);
     font-weight: 300;
     line-height: rem(55px);
