--- a/src/views/contact-us.jade
+++ b/src/views/contact-us.jade
@@ -5,7 +5,7 @@ block content
   section.section-contactus
     .container
       .contact-form.section-content
-        h1 We’d love to hear from you!
+        h1.section-heading We’d love to hear from you!
         p Reach us by using this form
         form.form-contact
           .form-row
