--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -266,6 +266,7 @@ $headings-font-weight:        300;
 //$display2-size:               5.5rem !default;
 //$display3-size:               4.5rem !default;
 //$display4-size:               3.5rem !default;
+$display4-size:               3.75rem;
 
 //$display1-weight:             300 !default;
 //$display2-weight:             300 !default;
