--- a/src/styles/pages/_innovation.scss
+++ b/src/styles/pages/_innovation.scss
@@ -8,9 +8,7 @@
       }
     }
   
-  .section-heading{
-    font-size: rem(60px);
-    line-height: rem(72px);
+  .display-4{
     font-weight: 100;
     text-transform: uppercase;
     margin: 0 0 rem(24px);
@@ -18,7 +16,6 @@
 
     @include media-breakpoint-down(sm) {
       font-size: rem(40px);
-      line-height: rem(48px);
     }
   }
 
