--- a/src/views/innovation.jade
+++ b/src/views/innovation.jade
@@ -3,7 +3,7 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-innovation.section-content
     .container
-      h1.section-heading Innovation
+      h1.display-4 Innovation
       .img-wrap
         img.img-fluid(src="./images/innovations.png" alt="")
       .info-wrap
