Edited: Team Page Section Heading

--- a/src/styles/pages/_team.scss
+++ b/src/styles/pages/_team.scss
@@ -148,7 +148,7 @@
     padding: rem(40px) 0 0;
   }
 
-  h3{
+  .section-heading{
     font-weight: 300;
     text-align: center;
     letter-spacing: 1px;
