--- a/src/views/industries.jade
+++ b/src/views/industries.jade
@@ -3,87 +3,140 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-industries.section-banner
     .container
+      ul.list-unstyled.list-industries
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+        li
+         a(href="#health")
+          i.icon-mail
+          span Health
+      h1.section-heading Industries
+      p.para Our expertise stems through extensive focus on open source frameworks, scalable architecture and easy to maintain technology applications. This extends to application of new age technologies such as data science (statistical, analytical and predictive) and processes to build disruptive tech solutions for all industries.
+      a.scroll-down.text-white(href="javascript:void(0);")
+        i.icon-angle-double-down
   section.section-industries.section-content
     .container
       .card-wrap.-striped
-        .card.card-expertise
+        #health.card.card-expertise
           .card-body
             h2.card-title Health
             img.card-img(src="./images/health.png",alt="Health-Logo")
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #media.card.card-expertise
           .card-body
             h2.card-title Media
             img.card-img(src='./images/media.png', alt='Media-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #insurance.card.card-expertise
           .card-body
             h2.card-title Insurance
             img.card-img(src='./images/insurance.png', alt='Insurance-Logo')
             p.card-text We’ve helped our customer in developing full-fledged platform which is integrated with various insurance companies to offer instant quotations to customers We have also developed a complete MIS system for live tracking of sale of vehicle insurance. Backbone is the state of the art framework for Issuing policies which includes features such Gamifications to boost the Agency Point of Sale (PoS)
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #sports.card.card-expertise
           .card-body
             h2.card-title Sports
             img.card-img(src='./images/sports.png', alt='Sports-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #manufacturing.card.card-expertise
           .card-body
             h2.card-title Manufacturing
             img.card-img(src='./images/manufacturing.png', alt='Manufacturing-logo')
             p.card-text We are helping Manufacturing companies and industries in identifying efficiencies by applying the Industry 4.0 principles, the Industrial Internet of Things by transforming them into a more connected factory. Through our robust IoT framework, we apply these methodologies to all the levels to improve the efficiency projects, This helps the companies to stand out from their competitors.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #education.card.card-expertise
           .card-body
             h2.card-title Education
             img.card-img(src='./images/education.png', alt='Education-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #tourisum.card.card-expertise
           .card-body
             h2.card-title Tourisum
             img.card-img(src='./images/tourisum.png', alt='Tourisum-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #finance.card.card-expertise
           .card-body
             h2.card-title Finance
             img.card-img(src='./images/finance.png', alt='Finance-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #e-commerce.card.card-expertise
           .card-body
             h2.card-title E-commerce
             img.card-img(src='./images/e-commerce.png', alt='E-commerce-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #sales.card.card-expertise
           .card-body
             h2.card-title Sales
             img.card-img(src='./images/sales.png', alt='Sales-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #public-sector.card.card-expertise
           .card-body
             h2.card-title Public Sector
             img.card-img(src='./images/public-sector.png', alt='Public-Sector-Logo')
             p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
             .scroll-top
               a.btn-scroll(href='javascript:void(0);') go to top
-        .card.card-expertise
+        #non-profit.card.card-expertise
           .card-body
             h2.card-title Non-Profit
             img.card-img(src='./images/non-profit.png', alt='Non-Profit-Logo')
