Edited: GitHub Link in Career Page And Imges in Team page

--- a/src/views/career.jade
+++ b/src/views/career.jade
@@ -25,7 +25,7 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+                img.card-img(src="./images/sahil-bhatia@2x.jpg", alt="")
               .testimonial
                 .employee-info
                   h4 Sahil Bhatia
@@ -36,29 +36,18 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+                img.card-img(src="./images/shweta-kale@2x.jpg", alt="")
               .testimonial
                 .employee-info
                   h4 Shweta Kale
                   p Senior Developer
-                p.card-text I enjoy coming to work! What else one will need from their job?! Here you will find so many passionate and dedicated people around you, all eager to share their knowledge. Credit goes to superbly maintained open culture. Improving my technical and soft skills is made easy and fun!
+                p.card-text "I enjoy coming to work! What else one will need from their job?! Here you will find so many passionate and dedicated people around you, all eager to share their knowledge. Credit goes to superbly maintained open culture. Improving my technical and soft skills is made easy and fun!"
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
-              .testimonial
-                .employee-info
-                  h4 Megha
-                  p Finance Brid
-                p.card-text Our goal is to help ourclients be independent. We help to build pixel perfect and high performance tech solutions, and then, work with our clients to build teams to further collaborate on the solution. We aspire to help clients disrupt their industries today and into the future.
-              .scroll-top
-                a.btn-scroll(href='javascript:void(0);') go to top
-          .card.card-testimonial
-            .card-body
-              .pic
-                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+                img.card-img(src="./images/ashvini-vibhute@2x.jpg", alt="")
               .testimonial
                 .employee-info
                   h4 Ashvini Vibhute
@@ -69,12 +58,12 @@ block content
           .card.card-testimonial
             .card-body
               .pic
-                img.card-img(src="https://dummyimage.com/192x167/999999/333333&text=Placeholder", alt="")
+                img.card-img(src="./images/kiran-deshmukh@2x.jpg", alt="")
               .testimonial
                 .employee-info
                   h4 Kiran
-                  p Software Developer
-                p.card-text Josh has done a great job of making me feel like I’m part of the team. Everyone is approachable and willing to take time out of their busy day to help each other out. I feel very empowered by—and confident in—my teammates, which makes for a great work environment.
+                  p Senior Software Developer
+                p.card-text Josh is offering me a very good work environment. I can work on various trending technologies. My colleagues are very helpful and supportive. I am happy for being part of this organization :.)
               .scroll-top
                 a.btn-scroll(href='javascript:void(0);') go to top
       .btn-wrap
