Edited:Career page

--- a/src/styles/pages/_career.scss
+++ b/src/styles/pages/_career.scss
@@ -1,11 +1,18 @@
 .section-career{
 
   &.section-banner{
-    background-color: $gray-68;
+    // position: relative;
+    background: transparent url('../images/career_banner@2x.jpg') no-repeat center center;
+    background-size: cover;
     min-height: rem(825px);
+    @include media-breakpoint-down(md){
+      min-height: rem(649px);
+    }
 
-    @include media-breakpoint-down(sm) {
-      min-height: rem(360px);
+    @include media-breakpoint-down(sm){
+      background: transparent url('../images/career-banner-mobile@2x.jpg') no-repeat center center;
+      background-size: cover;
+      min-height: rem(592px);
     }
   }
 
