--- a/src/views/index.jade
+++ b/src/views/index.jade
@@ -3,12 +3,11 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-home.section-banner
     .container
-        h2.text-white.abc INNOVATION <br>DISRUPTION
-        p.text-white IS THE WAY WE CHANGE
-        h4.text-white THE GAME
+        h2 INNOVATION <br>DISRUPTION
+        p IS THE WAY WE CHANGE
+        h4 THE GAME
         a.btn.btn-outline-danger.text-white(href="contact-us.html") Contact us
-        p
-          small.text-white to change yours
+        p to change yours
 
   section.section-home.section-expertise
     .container
