--- a/src/views/open-source.jade
+++ b/src/views/open-source.jade
@@ -3,7 +3,7 @@ extends ./layouts/bootstrap.jade
 block content
   section.section-open_source.section-banner
     .container
-  section.section-open_source.section-content
+  section#openSource.section-open_source.section-content
     .container
       h2.section-heading Driving Open Source
       p.txt-info We take pride in working with our community on various events, platforms and collaborations. True to our name, we are passionate about helping the progress of technology disruption in all forms.
