--- a/src/styles/pages/_contact-us.scss
+++ b/src/styles/pages/_contact-us.scss
@@ -2,7 +2,8 @@
 
   &.section-banner{
     min-height: rem(527px);
-    background-color: #E4DCD9;
+    background: transparent url("../images/contact-banner.jpg") no-repeat bottom center;
+    background-size: cover;
 
     @include media-breakpoint-down(sm) {
       min-height: rem(360px);
